# salary-tracker

./: .dockerignore  .env.example  .gitignore  .releaserc.json  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  manage.py  package-lock.json  package.json  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: ci.yml  publish.yml  release.yml
accounts/: admin.py  forms.py  models.py  tests.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
accounts/tests/: test_models.py  test_registration.py
desktop/: package-lock.json  package.json
desktop/backend/: backend.spec  desktop_backend.py
desktop/scripts/: build-linux.sh  build-windows.ps1
desktop/src/: main.js  preload.js  splash.css  splash.html
docs/: architecture.md  requirements.md
salary_tracker/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
salary_tracker/tests/: test_middleware.py
static/css/: styles.css
static/js/: dashboard.js
templates/: base.html
templates/registration/: initial_setup.html  logged_out.html  login.html  password_change_done.html  password_change_form.html  register.html
templates/tracker/: dashboard.html  management.html  onboarding.html  settings.html
tracker/: admin.py  context_processors.py  forms.py  inflation.py  inflation_sync.py  models.py  services.py  urls.py  views.py
tracker/migrations/: 0001_initial.py  0002_userpreference_is_onboarded.py  0003_userpreference_manual_baseline.py  0004_alter_inflationsource_code.py
tracker/tests/: test_forms.py  test_views.py  (+4 more)
(+3 files in other folders)
