[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salary-tracker"
version = "0.1.0"
description = "A lightweight Django web application for tracking salary history."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
  "Django==6.0",
  "djangorestframework==3.16.1",
  "gunicorn==23.0.0",
  "whitenoise==6.11.0",
  "python-dotenv==1.2.1",
  "requests==2.32.5",
]

[project.optional-dependencies]
desktop-build = ["pyinstaller==6.11.1"]

[tool.setuptools]
packages = ["salary_tracker", "tracker", "accounts"]
include-package-data = true
